--- a/index.html
+++ b/index.html
@@ -77,18 +77,12 @@
 
     </head>
 
-    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-        new Crate({
-            server: '829117322223812658', // Bigfoot's Game Shack
-            channel: '1098685870128767098' // #school
-        })
-    </script>
 
     <body id="body" >
         <div id="popup">
             <p class="popup-p">Visit our new site!</p><br/>
-            <div class="link-popup"><a class='link-popup-a'href="https://bigfootshack.net/">bigfootshack.net</a></div>
-            <div class="link-popup"><a class='link-popup-a1' href="invite.html">Blocked? Join our Discord for more links</a></div>
+            <div class="link-popup"><a class='link-popup-a'href="https://playblockpost.pages.dev/">Play blockpost</a></div>
+            <div class="link-popup"><a class='link-popup-a1' href="mailto:bigfoot.gaming9999@gmail.com">Blocked? Email support</a></div>
 
           </div>
           
